--- a/index.html
+++ b/index.html
@@ -1,1 +1,223 @@
-LabelMaker3D
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="description"
+        content="LabelMaker">
+  <meta name="keywords" content="LabelMaker, Instance Segmentation, 3D Scene Understanding">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>OpenMask3D 🛋</title>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-PYVRSFMDRL');
+  </script>
+
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+        rel="stylesheet">
+
+  <link rel="stylesheet" href="./static/css/bulma.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="icon" href="./static/images/favicon.svg">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script src="./static/js/bulma-carousel.min.js"></script>
+  <script src="./static/js/bulma-slider.min.js"></script>
+  <script src="./static/js/index.js"></script>
+</head>
+<body>
+
+
+
+<section class="hero">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered">
+        <div class="column has-text-centered">
+          <h1 class="title is-1 publication-title">LabelMaker 🎨<br />
+            <p class="title is-3 publication-title">Automatic Semantic Label Generation from RGB-D Trajectories</p>
+          </h1>          
+
+          <h1 class="title is-4" style="color: #5c5c5c;">3DV 2024</h1>
+          <div>
+            <span class="author-block">
+              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>1</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://hermannblum.net">Hermann Blum</a><sup>3</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1</sup>
+            </span>
+            <span class="author-block">
+              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1</sup>
+            </span>
+          </div>
+
+          <div class="is-size-5 publication-authors">
+            <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich, Switzerland</span>
+            <!-- <span class="author-block" style="margin-right: 1em;"><sup>2</sup>ETH AI Center, Switzerland</span> -->
+            <!-- <span class="author-block" style="margin-right: 1em;"><sup>3</sup>Google Zürich, Switzerland</span> -->
+          </div>
+
+
+          <div class="column has-text-centered">
+            <div class="publication-links">
+              <!-- PDF Link. -->
+              <span class="link-block">
+                <a href="static/pdf/openmask3d.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Paper</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2306.13631"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+              </span>
+              <!-- Code Link. -->
+              <span class="link-block">
+                <a href="#"
+                   class="external-link button is-normal is-rounded is-dark"
+                   style="background-color:#5c5c5c">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                  </a>
+              </span>
+    
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img src="static/images/teaser.jpeg" class="center"/>
+      <br><br>
+      <h2 class="subtitle has-text-centered">
+      <strong>LabelMaker</strong>.
+    </h2>
+    </div>
+  </div>
+</section>
+
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            Semantic annotations are indispensable to train or evaluate perception models,
+            yet very costly to acquire. This work introduces a fully automated 2D/3D
+            labeling framework that, without any human intervention, can generate labels
+            for RGB-D scans at equal (or better) level of accuracy than comparable manually
+            annotated datasets such as ScanNet. Our approach is based on an ensemble of
+            state-of-the-art segmentation models and 3D lifting through neural rendering.
+            We demonstrate the effectiveness of our LabelMaker pipeline by generating
+            significantly better labels for the ScanNet datasets and automatically labelling
+            the previously unlabeled ARKitScenes dataset.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Abstract. -->
+
+    <!-- Paper video. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Explanatory Video</h2>
+        <!-- <video controls poster="static/images/explanatory_video_poster.jpeg"> -->
+          <!-- <source src="static/videos/poster_session.mp4" type="video/mp4"> -->
+          <!-- Your browser does not support the video tag. -->
+        <!-- </video> -->
+      </div>
+    </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Qualitative results</h2>
+      <br>
+        <div class="content has-text-justified">
+          <p>
+            Using <i>LabelMaker</i> you can perform automatic semantic labeling of sequences of 2D images as well as 3D scenes.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section class="section">
+    <div class="container is-max-desktop">
+
+<h2 class="title is-3">BibTeX</h2>
+<pre><code>
+@inproceedings{Weder2024labelmaker3d,
+  title = {{LabelMaker: Automatic Semantic Label Generation from RGB-D Trajectories}},
+  author={Weder, Silvan and Blum, Hermann and Engelmann, Francis and Pollefeys, Marc},
+  booktitle = {International Conference on 3D Vision (3DV)},
+  year = {2024}
+}</code></pre>
+  </div>
+</section>
+
+<footer class="footer">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-8">
+        <div class="content">
+          <p>
+            This website is licensed under a <a rel="license"
+              href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
+              Commons Attribution-ShareAlike 4.0 International License</a>.
+          </p>
+          <p>
+            It borrows the source code of <a href="https://github.com/nerfies/nerfies.github.io">this website</a>.
+            We would like to thank Utkarsh Sinha and Keunhong Park.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+</body>
+</html>
+
+
