--- a/index.html
+++ b/index.html
@@ -6,21 +6,9 @@
         content="LabelMaker">
   <meta name="keywords" content="LabelMaker, Instance Segmentation, 3D Scene Understanding">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>OpenMask3D 🛋</title>
+  <title>LabelMaker 🎨</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-
-    gtag('js', new Date());
-
-    gtag('config', 'G-PYVRSFMDRL');
-  </script>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -51,18 +39,18 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">LabelMaker 🎨<br />
             <p class="title is-3 publication-title">Automatic Semantic Label Generation from RGB-D Trajectories</p>
-          </h1>          
+          </h1>
 
           <h1 class="title is-4" style="color: #5c5c5c;">3DV 2024</h1>
           <div>
             <span class="author-block">
-              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>1</sup>,
+              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>*, 1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://hermannblum.net">Hermann Blum</a><sup>3</sup>,
+              <a href="https://hermannblum.net">Hermann Blum</a><sup>*, 1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1</sup>
+              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1, 2</sup>
             </span>
             <span class="author-block">
               <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1</sup>
@@ -71,8 +59,7 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich, Switzerland</span>
-            <!-- <span class="author-block" style="margin-right: 1em;"><sup>2</sup>ETH AI Center, Switzerland</span> -->
-            <!-- <span class="author-block" style="margin-right: 1em;"><sup>3</sup>Google Zürich, Switzerland</span> -->
+            <span class="author-block" style="margin-right: 1em;"><sup>2</sup>Microsoft Mixed Reality &amp; AI Lab, Switzerland</span>
           </div>
 
 
@@ -80,7 +67,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="static/pdf/openmask3d.pdf"
+                <a href="static/pdf/labelmaker.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -89,7 +76,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2306.13631"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -108,7 +95,7 @@
                   <span>Code</span>
                   </a>
               </span>
-    
+
             </div>
 
           </div>
@@ -122,7 +109,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/images/teaser.jpeg" class="center"/>
+      <img src="static/images/teaser.jpg" class="center"/>
       <br><br>
       <h2 class="subtitle has-text-centered">
       <strong>LabelMaker</strong>.
@@ -188,7 +175,7 @@
 
 <h2 class="title is-3">BibTeX</h2>
 <pre><code>
-@inproceedings{Weder2024labelmaker3d,
+@inproceedings{Weder2024labelmaker,
   title = {{LabelMaker: Automatic Semantic Label Generation from RGB-D Trajectories}},
   author={Weder, Silvan and Blum, Hermann and Engelmann, Francis and Pollefeys, Marc},
   booktitle = {International Conference on 3D Vision (3DV)},
