--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
               <a href="https://hermannblum.net">Hermann Blum</a><sup>*, 1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1, 2</sup>
+              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1</sup>
             </span>
             <span class="author-block">
-              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1</sup>
+              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1, 2</sup>
             </span>
           </div>
 
