--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="static/pdf/labelmaker.pdf"
+                <a href="static/LabelMaker.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -109,7 +109,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/images/teaser.jpg" class="center"/>
+      <img src="static/images/labelmaker_teaser.png" class="center"/>
       <br><br>
       <h2 class="subtitle has-text-centered">
       <strong>LabelMaker</strong>.
