--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
       <img src="static/images/labelmaker_teaser.png" class="center"/>
       <br><br>
       <h2 class="subtitle has-text-centered">
-      <strong>LabelMaker</strong>.
+      LabelMaker bundles a collection of state-of-the-art segmentation models with different sets of predicted classes in a neural field.
+    LabelMaker can refine existing annotations and produce highly accurate 2D as well as 3D labels on ScanNet (top-right). At the same time,
+    it opens new possibilities to rapidly label large-scale datasets without human effort such as ARKitScenes (bottom-right).
     </h2>
     </div>
   </div>
