--- a/index.html
+++ b/index.html
@@ -43,25 +43,26 @@
 
           <h1 class="title is-4" style="color: #5c5c5c;">3DV 2024</h1>
           <div>
-            <span class="author-block">
-              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>*, 1</sup>,
+            <span class="author-block" style="margin-left: 35px">
+              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>*, 1</sup>
             </span>
-            <span class="author-block">
-              <a href="https://hermannblum.net">Hermann Blum</a><sup>*, 1</sup>,
+            <span class="author-block" style="margin-left: 35px">
+              <a href="https://hermannblum.net">Hermann Blum</a><sup>*, 1</sup>
             </span>
-            <span class="author-block">
-              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1</sup>
+            <span class="author-block" style="margin-left: 35px">
+              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1, 2, 3</sup>
             </span>
-            <span class="author-block">
-              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1, 2</sup>
+            <span class="author-block" style="margin-left: 35px">
+              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1, 4</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich, Switzerland</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>2</sup>Microsoft Mixed Reality &amp; AI Lab, Switzerland</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>2</sup>ETH AI Center</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>3</sup>Google</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>4</sup>Microsoft</span>
           </div>
-
 
           <div class="column has-text-centered">
             <div class="publication-links">
