--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Explanatory Video</h2>
+        <h2 class="title is-3">Video</h2>
         <!-- <video controls poster="static/images/explanatory_video_poster.jpeg"> -->
           <!-- <source src="static/videos/poster_session.mp4" type="video/mp4"> -->
           <!-- Your browser does not support the video tag. -->
