--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Qualitative results</h2>
       <br>
+      <iframe src="data/42897688_visualization/index.html" width="600" height="400" frameborder="1"></iframe>
+
         <div class="content has-text-justified">
           <p>
             Using <i>LabelMaker</i> you can perform automatic semantic labeling of sequences of 2D images as well as 3D scenes.
