--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Qualitative results</h2>
       <br>
-      <iframe src="data/42897688_visualization/index.html" width="600" height="400" frameborder="1"></iframe>
+      <iframe src="data/42897688_visualization/index.html" width="100%" height="500" frameborder="1"></iframe>
 
         <div class="content has-text-justified">
           <p>
