--- a/index.html
+++ b/index.html
@@ -164,11 +164,12 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Qualitative results</h2>
       <br>
-      <iframe src="data/42897688_visualization/index.html" width="100%" height="500" frameborder="1"></iframe>
+      <i>LabelMaker</i> can automatically create 2D and 3D semantic segmentations. Here we show 3D semantic segmentation on ARKitScenes reconstructions.
+      <iframe src="data/42897688_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
 
         <div class="content has-text-justified">
           <p>
-            Using <i>LabelMaker</i> you can perform automatic semantic labeling of sequences of 2D images as well as 3D scenes.
+            <!-- Using <i>LabelMaker</i> you can perform automatic semantic labeling of sequences of 2D images as well as 3D scenes. -->
           </p>
         </div>
       </div>
