--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
+
+  <style>
+    
+      .sem-label {
+        margin-top: 2px;
+        margin-bottom: -2px;
+        margin-right: 2px;
+        min-width: 15px;
+        min-height: 15px;
+        display: inline-block;
+        border: 0px solid black;
+        margin-left: 10px;
+        border-radius: 50%;
+        display: inline-block;
+      }
+      </style>
+
 </head>
 <body>
 
@@ -149,6 +166,9 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Video</h2>
+
+        <iframe width="800" height="430" src="https://www.youtube.com/embed/Osw9OgtTpu8?si=N-EpVttLtJJZt8hu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
         <!-- <video controls poster="static/images/explanatory_video_poster.jpeg"> -->
           <!-- <source src="static/videos/poster_session.mp4" type="video/mp4"> -->
           <!-- Your browser does not support the video tag. -->
@@ -163,9 +183,26 @@
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Qualitative results</h2>
-      <br>
-      <i>LabelMaker</i> can automatically create 2D and 3D semantic segmentations. Here we show 3D semantic segmentation on ARKitScenes reconstructions.
-      <iframe src="data/42897688_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
+      <i>LabelMaker</i> can automatically create highly accurate 2D and 3D semantic segmentations.
+      Below we show 3D semantic segmentation on ARKitScenes reconstructions.
+      <iframe src="https://labelmaker3d.github.io/data/42897688_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
+
+
+      <span class="sem-label" style="background-color: rgb(174, 199, 232); "></span> Wall
+      <span class="sem-label" style="background-color: rgb(214, 39, 40); "></span> Door
+      <span class="sem-label" style="background-color: rgb(64, 160, 250); "></span> Doorframe
+      <span class="sem-label" style="background-color: rgb(255, 187, 120); "></span> Bed
+      <span class="sem-label" style="background-color: rgb(196, 156, 148); "></span> Picture
+      <span class="sem-label" style="background-color: rgb(141, 91, 229); "></span> Pillow
+      <span class="sem-label" style="background-color: rgb(152, 223, 138); "></span> Floor
+      <span class="sem-label" style="background-color: rgb(153, 108, 234); "></span> Object
+      <span class="sem-label" style="background-color: rgb(38, 96, 167); "></span> Trash
+      <span class="sem-label" style="background-color: rgb(237, 204, 37); "></span> Lamp
+
+      <span class="sem-label" style="background-color: rgb(186, 197, 62); "></span> Carpet
+
+      <span class="sem-label" style="background-color: rgb(186, 197, 62); "></span> Rug
+
 
         <div class="content has-text-justified">
           <p>
