--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2311.12174"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -104,7 +104,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="#"
+                <a href="https://github.com/cvg/LabelMaker/"
                    class="external-link button is-normal is-rounded is-dark"
                    style="background-color:#5c5c5c">
                   <span class="icon">
