--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/cvg/LabelMaker/"
-                   class="external-link button is-normal is-rounded is-dark"
-                   style="background-color:#5c5c5c">
+                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
