--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <h2 class="title is-3">Qualitative results on ARKitScenes</h2>
       <i>LabelMaker</i> can automatically create highly accurate 2D and 3D semantic segmentations.
       Below we show 3D semantic segmentation on ARKitScenes reconstructions.
-      <iframe src="https://labelmaker3d.github.io/data/42445991_living_room_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
+      <iframe src="data/42445991_living_room_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
       <div style="font-size: 10px">
       <span class="sem-label" style="background-color: rgb(38, 96, 167); "></span> Ashcan
       <span class="sem-label" style="background-color: rgb(143, 245, 111); "></span> Backpack
@@ -236,7 +236,7 @@
       <span class="sem-label" style="background-color: rgb(197, 176, 213); "></span> Window
       </div>
 
-      <iframe src="https://labelmaker3d.github.io/data/42897688_bedroom_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
+      <iframe src="data/42897688_bedroom_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
       <div style="font-size: 10px">
 
       <span class="sem-label" style="background-color: rgb(34, 14, 130); "></span> Apparel
@@ -285,7 +285,7 @@
 <span class="sem-label" style="background-color: rgb(197, 176, 213); "></span> Window
 </div>
 
-      <iframe src="https://labelmaker3d.github.io/data/47333462_bedroom_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
+      <iframe src="data/47333462_bedroom_visualization/index.html" width="100%" height="500" frameborder="1" style="border: 1px solid gray"></iframe>
       <div style="font-size: 10px">
 
       <span class="sem-label" style="background-color: rgb(38, 96, 167); "></span> Ashcan
@@ -331,7 +331,7 @@
 <span class="sem-label" style="background-color: rgb(174, 199, 232); "></span> Wall
 <span class="sem-label" style="background-color: rgb(152, 83, 7); "></span> Wardrobe
 <span class="sem-label" style="background-color: rgb(197, 176, 213); "></span> Window
-      </div>
+</div>
 
         <div class="content has-text-justified">
           <p>
