--- a/labelmaker.html
+++ b/labelmaker.html
@@ -116,105 +116,6 @@
             </div>
 
           </div>
-
-          <div class="">
-            <h2 class="subtitle has-text-centered">
-      LabelMaker bundles a collection of state-of-the-art segmentation models with different sets of predicted classes in a neural field.
-    LabelMaker can refine existing annotations and produce highly accurate 2D as well as 3D labels on ScanNet. At the same time,
-    it opens new possibilities to rapidly label large-scale datasets without human effort.
-    </h2>
-          </div>
-        </div>
-
-        <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">ARKit LabelMaker 🏠<br>
-            <p class="title is-3 publication-title">A New Scale for Indoor 3D Scene Understanding</p>
-          </h1>
-
-          <div>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="">Guangda Ji</a><sup>1</sup>
-            </span>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>1</sup>
-            </span>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1, 2, 3</sup>
-            </span>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1, 4</sup>
-            </span>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://hermannblum.net">Hermann Blum</a><sup>1, 5</sup>
-            </span>
-          </div>
-
-          <div class="is-size-5 publication-authors">
-            <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>2</sup>Stanford</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>3</sup>Google</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>4</sup>Microsoft</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>5</sup>Uni Bonn / Lamarr Institute</span>
-          </div>
-
-          <div class="column has-text-centered">
-            <div class="publication-links">
-              <!-- PDF Link. -->
-              <span class="link-block publication-links">
-                <a href="https://arxiv.org/pdf/2410.13924"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                  </span>
-                  <span>Paper</span>
-                </a>
-              </span>
-              <span class="link-block publication-links">
-                <a href="https://arxiv.org/abs/2410.13924"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
-              <!-- Code Link. -->
-              <span class="link-block publication-links">
-                <a href="https://github.com/cvg/labelmaker"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code</span>
-                  </a>
-              </span>
-              <span class="link-block publication-links">
-                <a href="https://huggingface.co/datasets/labelmaker/arkit_labelmaker"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-images"></i>
-                  </span>
-                  <span>Dataset</span>
-                </a>
-              </span>
-              <span class="link-block publication-links">
-                <a href="https://kaldir.vc.in.tum.de/scannet_benchmark/scannet200_semantic_label_3d"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-star"></i>
-                  </span>
-                  <span>ScanNet200 SOTA</span>
-                </a>
-              </span>
-            </div>
-          </div>
-
-          <div class=""></div>
-            <h2 class="subtitle has-text-centered">
-              We complement ARKitScenes dataset with dense semantic annotations that are automatically generated at scale. This produces the first large-scale, real-world 3D dataset with dense semantic annotations.
-              Training on this auto-generated data, we push forward the state-of-the-art performance on ScanNet and ScanNet200 with prevalent 3D semantic segmentation models.
-            </h2>
-          </div>
         </div>
       </div>
     </div>
@@ -227,7 +128,11 @@
     <div class="hero-body">
       <img src="static/images/labelmaker_teaser.png" class="center"/>
       <br><br>
-
+      <h2 class="subtitle has-text-centered">
+      LabelMaker bundles a collection of state-of-the-art segmentation models with different sets of predicted classes in a neural field.
+    LabelMaker can refine existing annotations and produce highly accurate 2D as well as 3D labels on ScanNet (top-right). At the same time,
+    it opens new possibilities to rapidly label large-scale datasets without human effort such as ARKitScenes (bottom-right).
+    </h2>
     </div>
   </div>
 </section>
@@ -235,6 +140,26 @@
 
 <section class="section">
   <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            Semantic annotations are indispensable to train or evaluate perception models,
+            yet very costly to acquire. This work introduces a fully automated 2D/3D
+            labeling framework that, without any human intervention, can generate labels
+            for RGB-D scans at equal (or better) level of accuracy than comparable manually
+            annotated datasets such as ScanNet. Our approach is based on an ensemble of
+            state-of-the-art segmentation models and 3D lifting through neural rendering.
+            We demonstrate the effectiveness of our LabelMaker pipeline by generating
+            significantly better labels for the ScanNet datasets and automatically labelling
+            the previously unlabeled ARKitScenes dataset.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Abstract. -->
 
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
@@ -417,29 +342,16 @@
   </div>
 
   <section class="section">
-    <div class="container is-max-desktop"></div>
+    <div class="container is-max-desktop">
+
 <h2 class="title is-3">BibTeX</h2>
-      <div class="columns">
-        <div class="column">
-<code>
-@inproceedings{Weder2024labelmaker,<br>
-  title = {{LabelMaker: Automatic Semantic Label Generation from RGB-D Trajectories}},<br>
-  author={Weder, Silvan and Blum, Hermann and Engelmann, Francis and Pollefeys, Marc},<br>
-  booktitle = {International Conference on 3D Vision (3DV)},<br>
+<pre><code>
+@inproceedings{Weder2024labelmaker,
+  title = {{LabelMaker: Automatic Semantic Label Generation from RGB-D Trajectories}},
+  author={Weder, Silvan and Blum, Hermann and Engelmann, Francis and Pollefeys, Marc},
+  booktitle = {International Conference on 3D Vision (3DV)},
   year = {2024}
-}</code>
-
-        </div>
-        <div class="column">
-<code>
-@inproceedings{Ji2024arkitlabelmaker,<br>
-  title = {{ARKit LabelMaker: A New Scale for Indoor 3D Scene Understanding}},<br>
-  author={Ji, Guangda and Weder, Silvan and Engelmann, Francis and Pollefeys, Marc and Blum, Hermann},<br>
-  year = {2024}
-}</code>
-        </div>
-      </div>
-
+}</code></pre>
   </div>
 </section>
 
