update website to highlight new cvpr paper

--- a/index.html
+++ b/index.html
@@ -53,83 +53,13 @@
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
-        <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">LabelMaker 🎨<br />
-            <p class="title is-3 publication-title">Automatic Semantic Label Generation from RGB-D Trajectories</p>
-          </h1>
-
-          <h1 class="title is-4" style="color: #5c5c5c;">3DV 2024</h1>
-          <div>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>*, 1</sup>
-            </span>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://hermannblum.net">Hermann Blum</a><sup>*, 1</sup>
-            </span>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1, 2, 3</sup>
-            </span>
-            <span class="author-block" style="margin-left: 25px">
-              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1, 4</sup>
-            </span>
-          </div>
-
-          <div class="is-size-5 publication-authors">
-            <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>2</sup>ETH AI Center</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>3</sup>Google</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>4</sup>Microsoft</span>
-          </div>
-
-          <div class="column has-text-centered">
-            <div class="publication-links">
-              <!-- PDF Link. -->
-              <span class="link-block">
-                <a href="static/LabelMaker.pdf"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                  </span>
-                  <span>Paper</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="https://arxiv.org/abs/2311.12174"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
-              <!-- Code Link. -->
-              <span class="link-block">
-                <a href="https://github.com/cvg/LabelMaker/"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code</span>
-                  </a>
-              </span>
-
-            </div>
-
-          </div>
-
-          <div class="">
-            <h2 class="subtitle has-text-centered">
-      LabelMaker bundles a collection of state-of-the-art segmentation models with different sets of predicted classes in a neural field.
-    LabelMaker can refine existing annotations and produce highly accurate 2D as well as 3D labels on ScanNet. At the same time,
-    it opens new possibilities to rapidly label large-scale datasets without human effort.
-    </h2>
-          </div>
-        </div>
 
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">ARKit LabelMaker 🏠<br>
             <p class="title is-3 publication-title">A New Scale for Indoor 3D Scene Understanding</p>
           </h1>
+          <h1 class="title is-4" style="color: #5c5c5c;">CVPR 2025</h1>
+
 
           <div>
             <span class="author-block" style="margin-left: 25px">
@@ -198,12 +128,12 @@
                 </a>
               </span>
               <span class="link-block publication-links">
-                <a href="https://kaldir.vc.in.tum.de/scannet_benchmark/scannet200_semantic_label_3d"
+                <a href="https://kaldir.vc.in.tum.de/scannet_benchmark/semantic_label_3d"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-star"></i>
                   </span>
-                  <span>ScanNet200 SOTA</span>
+                  <span>ScanNet SOTA</span>
                 </a>
               </span>
             </div>
@@ -219,6 +149,108 @@
       </div>
     </div>
   </div>
+</section>
+
+<section class="hero teaser">
+  <div class="container">
+    <a href="https://huggingface.co/datasets/labelmaker/arkit_labelmaker" style="margin-right: 25px">
+      <img src="https://huggingface.co/datasets/huggingface/badges/resolve/main/dataset-on-hf-xl.svg" alt="Dataset on HF">
+    </a>
+    <a href="https://huggingface.co/labelmaker/PTv3-ARKit-LabelMaker">
+      <img src="https://huggingface.co/datasets/huggingface/badges/resolve/main/model-on-hf-xl.svg" alt="Model on HF">
+    </a>
+  </div>
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img src="static/images/arkit_labelmaker_teaser.png" class="center" style="max-width: 600px"/>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered">
+        <div class="column is-full-width">
+          <h2 class="title is-4">Our dataset and model are powered by:</h2>
+        </div>
+      </div>
+    </div>
+</section>
+<section class="section">
+    <div class="container is-max-desktop">
+        <div class="column has-text-centered">
+          <h1 class="title is-1 publication-title">LabelMaker 🎨<br />
+            <p class="title is-3 publication-title">Automatic Semantic Label Generation from RGB-D Trajectories</p>
+          </h1>
+
+          <h1 class="title is-4" style="color: #5c5c5c;">3DV 2024</h1>
+          <div>
+            <span class="author-block" style="margin-left: 25px">
+              <a href="https://www.silvanweder.com">Silvan Weder</a><sup>*, 1</sup>
+            </span>
+            <span class="author-block" style="margin-left: 25px">
+              <a href="https://hermannblum.net">Hermann Blum</a><sup>*, 1</sup>
+            </span>
+            <span class="author-block" style="margin-left: 25px">
+              <a href="https://francisengelmann.github.io">Francis Engelmann</a><sup>1, 2, 3</sup>
+            </span>
+            <span class="author-block" style="margin-left: 25px">
+              <a href="https://people.inf.ethz.ch/marc.pollefeys/">Marc Pollefeys</a><sup>1, 4</sup>
+            </span>
+          </div>
+
+          <div class="is-size-5 publication-authors">
+            <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>2</sup>ETH AI Center</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>3</sup>Google</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>4</sup>Microsoft</span>
+          </div>
+
+          <div class="column has-text-centered">
+            <div class="publication-links">
+              <!-- PDF Link. -->
+              <span class="link-block">
+                <a href="static/LabelMaker.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Paper</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2311.12174"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+              </span>
+              <!-- Code Link. -->
+              <span class="link-block">
+                <a href="https://github.com/cvg/LabelMaker/"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                  </a>
+              </span>
+
+            </div>
+
+          </div>
+
+          <div class="">
+            <h2 class="subtitle has-text-centered">
+            LabelMaker bundles a collection of state-of-the-art segmentation models with different sets of predicted classes in a neural field.
+            LabelMaker can refine existing annotations and produce highly accurate 2D as well as 3D labels on ScanNet. At the same time,
+            it opens new possibilities to rapidly label large-scale datasets without human effort.
+            </h2>
+          </div>
+        </div>
+      </div>
 </section>
 
 
@@ -415,6 +447,7 @@
       </div>
     </div>
   </div>
+
 
   <section class="section">
     <div class="container is-max-desktop"></div>
